# rainbow

./: LICENSE  README.md  rainbow.cabal
src/: Check.hs  Concrete.hs  Driver.hs  Driver.hs.rej  Main.hs  Normalize.hs  Palette.hs  PaletteTry.hs  Parser.hs  Syntax.hs
src/Simple/: Concrete.hs  Driver.hs  Main.hs  Parser.hs  Syntax.hs
test/: hom.bow  pattern.bow  prelude.bow  simple.bow  unit.bow
test/old/: simple.bow
