name:                rainbow
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/mvr/rainbow#readme
license:             BSD3
license-file:        LICENSE
author:              Mitchell Riley
maintainer:          mitchell.v.riley@gmail.com
copyright:           2020 Mitchell Riley
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable rainbow
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , mtl
                     , text
                     , megaparsec
